--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,3 +3,11 @@
 @tailwind utilities;
 
 
+.foto::after{
+    background-image: url('https://res.cloudinary.com/fedexx/image/upload/v1692113799/invi/curva01_violeta_tkziux.png'); 
+    width: 100%;
+    height: 16rem;
+    background-color: blue;
+    position:relative;
+    top:50%;
+}
