--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,24 @@
 
 
 body{
-    
     scroll-behavior: smooth;
+}
+
+
+.fixed-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    z-index: -1; /* Ensure it stays behind all content */
+    background-attachment: fixed;
+}
+
+.fixed-background img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
