--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,15 +23,9 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-size: cover;
     background-position: center;
     z-index: -1; /* Ensure it stays behind all content */
     background-attachment: fixed;
-}
-
-.fixed-background img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
