--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,14 +18,10 @@ body{
 }
 
 
-.fixed-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    z-index: -1; /* Ensure it stays behind all content */
-    background-attachment: fixed;
-}
+body {
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+  }
+  html {
+    height: -webkit-fill-available;
+  }
