--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,3 +17,11 @@
 .cierre{
     white-space: pre;
 }
+
+
+
+.bg-custom {
+    background-image: url('https://drive.google.com/uc?export=view&id=1VXQV1kihXtsfRGXGs65L8UkfbfWxRnm3');
+    background-size: cover;
+    background-position: center;
+  }
